# mcp-multi-server

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  RELEASE_NOTES.md  pyproject.toml  run.sh
.claude/agents/: conformance-checker.md  fastmcp-reviewer.md  oauth-auditor.md  transport-auditor.md
.claude/commands/: sdk-migration-manager.md
.claude/skills/sdk-migration-manager/: SKILL.md
.claude/skills/sdk-migration-manager/evals/: evals.json
.claude/skills/sdk-migration-manager/references/: ci-recipe.md  modes.md  patterns.md  schemas.md  worked-example-1.13-to-1.27.md
.claude/skills/sdk-migration-manager/scripts/: detect_version.py  new_run_dir.py  probe_subagents.py
.github/workflows/: docs.yml  release.yml  tests.yml  update_rtd.yml
docs/: Makefile  conf.py  index.md  requirements.txt
docs/api/: mcp_multi_server.rst
examples/: README.md  mcp_servers.json
examples/client/: __init__.py  chat_client.py  sync_chat_client.py
examples/clients/: chat_client.py  prompt_client.py  tool_client.py
examples/servers/: prompt_server.py  resource_server.py  tool_server.py
examples/support/: initialize_db.py  inventory_db.py  mcp.py  media_handler.py
scripts/: install_claude_skills.py  mcp_config.py  release.py  update_versions.py
src/mcp_multi_server/: __init__.py  client.py  sync_client.py  utils.py
tests/: conftest.py  test_audio_handling.py  test_client.py  test_client_example.py  test_config.py  test_image_handling.py  test_prompt_handling.py  test_sync_client.py  test_utils.py
