[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-multi-server"
version = "1.2.0"
description = "A Python library for managing connections to multiple Model Context Protocol (MCP) servers"
authors = [{ name = "Antonio Pisani", email = "antonio.pisani@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
keywords = [
    "mcp",
    "model-context-protocol",
    "multi-server",
    "openai",
    "llm",
    "ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp (>=1.27.1,<2.0.0)",
    "pydantic (>=2.0.0,<3.0.0)",
]

[project.optional-dependencies]
openai = ["openai (>=1.102.0,<2.0.0)"]
examples = [
    "openai (>=1.102.0,<2.0.0)",
    "pyautogui (>=0.9.54,<0.10.0)",
    "pyscreeze (>=1.0.1,<2.0.0)",
    "pillow (>=10.0.0,<11.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
]

[project.urls]
"Source Code" = "https://github.com/apisani1/mcp-multi-server"
"Release Notes" = "https://github.com/apisani1/mcp-multi-server/releases"
Documentation = "https://mcp-multi-server.readthedocs.io/"
"Issue Tracker" = "https://github.com/apisani1/mcp-multi-server/issues"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5,<7",
    "python-dotenv>=1.1.0,<2",
    "tomli>=2.0.0,<3",
]
test = [
    "pytest>=7.4.0,<8",
    "pytest-asyncio>=0.21.0,<0.22",
    "pytest-cov>=6.1.0,<7",
]
lint = [
    "flake8>=7.1.0,<8",
    "flake8-pyproject>=1.2.0,<2",
    "pylint>=3.3.0,<4",
    "black>=25.1.0,<26",
    "isort>=6.0.0,<7",
]
typing = ["mypy>=1.15,<2"]
docs = [
    "sphinx>=8.1.3,<9",
    "sphinx-rtd-theme>=3.0.2,<4",
    "myst-parser>=4.0.0,<5",
    "sphinx-copybutton>=0.5.2,<0.6",
    "sphinx-autobuild>=2021.3.14,<2022",
    "sphinx-sitemap>=2.6.0,<3",
    "sphinx-tabs>=3.4.7,<4",
    "doc8>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_multi_server"]

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version",
    "docs/conf.py:release",
    "docs/index.md:**Version**",
    "src/mcp_multi_server/__init__.py:__version__",
]

[tool.black]
line-length = 119

[tool.flake8]
extend-ignore = [
    "W503",
    # E501: Line too long
    "E501",
    # D100: Missing docstring in public module
    "D100",
    # D101: Missing docstring in public class
    "D101",
    # D102: Missing docstring in public method
    "D102",
    # D103: Missing docstring in public function
    "D103",
    # D104: Missing docstring in public package
    "D104",
    # W605: Invalid escape sequence
    "W605",
    # E203: Whitespace before ':'
    "E203",
]
exclude = ["docs", "tests", ".venv", ".git", "__pycache__", "build", "dist"]
radon-max-cc = 15

[tool.mypy]
exclude = '^(tests\/test.*\.py|docs\/.*\.py)$'
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_unused_ignores = false

[tool.pylint.MESSAGES_CONTROL]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "use-implicit-booleaness-not-comparison-to-string",
    "use-implicit-booleaness-not-comparison-to-zero",
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "no-self-argument",
    "broad-exception-caught",
    "anomalous-backslash-in-string",
    "logging-fstring-interpolation",
    "raise-missing-from",
    "redefined-builtin",
    "invalid-overridden-method",
    "unspecified-encoding",
    "import-outside-toplevel",
    "global-statement",
    "global-variable-not-assigned",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "too-many-statements",
    "too-many-branches",
    "too-many-return-statements",
    "too-many-instance-attributes",
    "unnecessary-dunder-call",
    "duplicate-code",
    "line-too-long",
]

[tool.pylint.MASTER]
ignore = ["tests", "docs", ".venv", ".git", "__pycache__", "build", "dist"]

[tool.isort]
profile = "black"
known_third_party = [
    "numpy",
    "pandas",
    "keras",
    "tensorflow",
    "sklearn",
    "matplotlib",
    "scipy",
    "h5py",
    "seaborn",
    "numba",
    "gym",
    "PyQt6",
    "PyQt5",
    "pyqtgraph",
    "fastapi",
    "pytest",
    "uvicorn",
    "pydantic",
    "requests",
    "aiohttp",
    "databases",
    "aioredis",
    "sqlalchemy",
    "psycopg2-binary",
    "snappy",
    "asyncpg",
    "pytest_asyncio",
]
known_first_party = ["mcp_multi_server"]
force_single_line = false
multi_line_output = 3
force_grid_wrap = 2
use_parentheses = true
include_trailing_comma = true
lines_after_imports = 2
ensure_newline_before_comments = true
line_length = 119
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "FIRSTPARTY"
extend_skip = ["tests", "docs", ".venv", ".git", "__pycache__", "build", "dist"]

[tool.doc8]
max-line-length = 120
ignore = ["D004", "D002"]
ignore-path = ["docs/_build"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require running MCP servers)",
]
asyncio_mode = "auto"
